--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,97 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:padding="15dp">
+    <Button
+        android:id="@+id/btn_ui"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/btn_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:text="Button"/>
-
-        <Button
-            android:id="@+id/btn_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="EditText"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/btn_radio_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="RadioButton"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/btn_checkBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CheckBox"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/btn_imageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ImageView"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/btn_listView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="ListView"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/btn_gridView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="GridView"
-            android:textAllCaps="false"/>
-
-        <Button
-            android:id="@+id/btn_recycleView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="RecycleView"
-            android:textAllCaps="false"/>
-
-        <HorizontalScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <Button
-                    android:layout_width="200dp"
-                    android:layout_height="300dp"
-                    android:text="Text"
-                    android:textAllCaps="false"/>
-                <Button
-                    android:layout_width="200dp"
-                    android:layout_height="300dp"
-                    android:text="Text"
-                    android:textAllCaps="false"/>
-                <Button
-                    android:layout_width="200dp"
-                    android:layout_height="300dp"
-                    android:text="Text"
-                    android:textAllCaps="false"/>
-                <Button
-                    android:layout_width="200dp"
-                    android:layout_height="300dp"
-                    android:text="Text"
-                    android:textAllCaps="false"/>
-            </LinearLayout>
-        </HorizontalScrollView>
-    </LinearLayout>
-</ScrollView>
+        android:layout_height="wrap_content"
+        android:text="UI"
+        android:textAllCaps="false"/>
+</LinearLayout>
