--- a/app/src/main/res/layout/ui_activity_main.xml
+++ b/app/src/main/res/layout/ui_activity_main.xml
@@ -98,6 +98,13 @@
             android:text="CustomDialog"
             android:textAllCaps="false"/>
 
+        <Button
+            android:id="@+id/main_btn_popup_window"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PopupWindow"
+            android:textAllCaps="false"/>
+
         <HorizontalScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
