--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp">
+    android:padding="15dp"
+    android:orientation="vertical">
     <Button
         android:id="@+id/btn_ui"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="UI"
+        android:textAllCaps="false"/>
+
+    <Button
+        android:id="@+id/btn_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fragment"
         android:textAllCaps="false"/>
 </LinearLayout>
